--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,13 @@ footer hr{ width: 50%; }
 }
 .banner-button{margin: 20px auto 0px auto;}
 
+.card-1{
+
+}
+.card-2{
+    
+}
+
 /* About-Home */
 .about-home{margin:30px auto;}
 /* Estimate Form Section */
