--- a/css/style.css
+++ b/css/style.css
@@ -212,10 +212,19 @@ footer hr{ width: 50%; }
 .banner-button{margin: 20px auto 0px auto;}
 
 .card-1{
-
+    width: 100%;
+    max-height: 300px;
+    margin-top: 20px;
+    padding: 15px 20px;
+}
+.card-1 img{
+    max-width:150px;
 }
 .card-2{
-    
+    width: 100%;
+    max-height: 300px;
+    margin-top: 20px;
+    padding: 15px 20px;
 }
 
 /* About-Home */
