--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ footer hr{ width: 50%; }
     margin: 25px auto;
 }
 .about hr{color:#E57C04}
-.quote{font-style:italic;}
+.quote{font-style:italic;font-size:larger;background-color:rgba(128, 128, 128, 0.301);border-radius:5px;padding:10px}
 .quote-marks{font-family:Georgia, 'Times New Roman', Times, serif;font-weight:bolder;font-size:larger;margin:0 5px;}
 
 /* *****************      Estimate      ******************* */
