--- a/css/style.css
+++ b/css/style.css
@@ -203,9 +203,9 @@ footer hr{ width: 50%; }
 /* ********************************************************* */
 /* ***  Banner  *** */
 .banner{
-    height: 300px;
+    height: 325px;
     overflow: hidden;
-    background: url('../images/roof.jpg') center / cover no-repeat;
+    background: url('../images/banner.jpg') center / cover no-repeat;
     padding: 10px 25px 25px 25px;
     border-radius: 0px 0px 5px 5px;
 }
@@ -217,12 +217,12 @@ footer hr{ width: 50%; }
     font-weight:bold;
 }
 .banner-button{margin: 20px auto 0px auto;}
-.home-main{margin: 20px auto;padding:15px;}
+.home-main{margin: 50px auto;padding:15px;}
 .home-main p{
-    font-size:1.3rem;
+    font-size:1.7rem;
     color:black;
     font-weight:bold;
-    margin-bottom:25px;
+    margin-bottom:65px;
 }
 
 /* ***************      Why Choose Us      ***************** */
